docs: a little fix in diploma

--- a/docs/diploma/20-design.tex
+++ b/docs/diploma/20-design.tex
@@ -1,6 +1,6 @@
 \section{Конструкторская часть}
 
-В данном разделе переставлена архитектура программного обеспечения (модуля ядра zram). Приведен алгоритм вычисления информационной энтропии для страниц оперативной памяти и алгоритм записи страниц в блочном устройстве.
+В данном разделе представлена архитектура программного обеспечения (модуля ядра zram). Приведен алгоритм вычисления информационной энтропии для страниц оперативной памяти и алгоритм записи страниц в блочном устройстве.
 
 Алгоритмы рассчитаны на организацию кода в блоки, в которых могут быть несколько точек выхода и одна точка входа.
 
